--- a/config/database.yml
+++ b/config/database.yml
@@ -11,15 +11,17 @@ default: &default
 
 development:
   <<: *default
-  database: db/development.sqlite3
+  database: g_calendar_faker_development
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: db/test.sqlite3
+  database: g_calendar_faker_test
 
 production:
   <<: *default
-  database: db/production.sqlite3
+  database: g_calendar_faker_production
+  username: g_calendar_faker
+  password: <%= ENV['G_CALENDAR_FAKER_DETABASE_PASSWORD']%>
